--- a/doc/MakingPlots/LaTeX/BaseFiles/integpixfill.tex
+++ b/doc/MakingPlots/LaTeX/BaseFiles/integpixfill.tex
@@ -2,13 +2,13 @@
   \begin{center}
 
     \begin{tikzpicture}
-      \foreach \j/\y in {0/0,1/-0.09,2/-0.18}
-          \foreach \i/\x in {0/0,1/0.09,2/0.18,3/0.27,4/0.36,5/0.45,6/0.54,7/0.63,8/0.72,9/0.81,10/0.90}
+      \foreach \j/\y in {0/0,1/-0.125,2/-0.25}
+          \foreach \i/\x in {0/0,1/0.125,2/0.25,3/0.375,4/0.5,5/0.625,6/0.75,7/0.875}
                    {
                      \node[anchor=south west, draw, inner sep=0pt,
                        line width=1pt] (img) 
                      at (\x\linewidth,\y\linewidth) 
-                          {\includegraphics[width=0.09\linewidth]
+                          {\includegraphics[width=0.125\linewidth]
                             {./BaseFiles/IntegPixfill/\j_\i.jpg}};
                    }
     \end{tikzpicture}
