Corrected mistaken full stop after display math!

--- a/doc/docsrc/mockgals.texinfo
+++ b/doc/docsrc/mockgals.texinfo
@@ -2488,7 +2488,7 @@ see @ref{Defining an ellipse}. Based on our definition there, it is
 the angle with the first axis of the array, which is different between
 the two standards. The equation to convert the two is:
 
-@dispmath{\theta_{\rm{C}}=90^\circ-\theta_{\rm{FITS}}}.
+@dispmath{\theta_{\rm{C}}=90^\circ-\theta_{\rm{FITS}}}
 
 @pindex fitsarrayvv
 In order to read from and write to a FITS image with relative ease we
